--- a/client/accounts.html
+++ b/client/accounts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Chart of Accounts</title>
     <link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.min.css">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -45,15 +45,25 @@
                                 <label for="accountName">Account Name</label>
                             </div>
                             <div class="input-field col s12 m4 l2">
-                                <input name="accountType" id="accountType" type="text" class="validate">
-                                <label for="accountType">Account Type</label>
+                                <select name="accountType" id="accountType">
+                                    <option value="" disabled selected>Choose an option</option>
+                                    <option value="asset">Asset</option>
+                                    <option value="liability">Liability</option>
+                                    <option value="ownersEquity">Owners Equity</option>
+                                </select>
+                                <label>Account Type</label>
                             </div>
                             <div class="input-field col s12 m4 l2">
-                                <input name="normalSide" id="normalSide" type="text" class="validate">
-                                <label for="normalSide">Normal Side</label>
+                                <select name="normalSide" id="normalSide" class="validate">
+                                    <option value="" disabled selected>Choose an option</option>
+                                    <option value="left">Left</option>
+                                    <option value="right">Right</option>
+                                </select>
+                                <label>Normal Side</label>
                             </div>
                             <div class="input-field col s12 m4 l2">
-                                <input name="initialBalance" id="initialBalance" step='0.01' value='0.00' placeholder='0.00' type="number"
+                                <input name="initialBalance" id="initialBalance" step='0.01' value='0.00'
+                                       placeholder='0.00' type="number"
                                        class="validate">
                                 <label for="initialBalance">Initial Balance</label>
                             </div>
@@ -78,11 +88,15 @@
                                 <label for="order">Order</label>
                             </div>
                             <div class="input-field col s12 m4 l2">
-                                <input name="subGroup" id="subGroup" type="text" class="validate">
-                                <label for="subGroup">Sub Group</label>
+                                <select name="subGroup" id="subGroup" class="validate">
+                                    <option value="" disabled selected>Choose an option</option>
+                                    <option value="current">Current</option>
+                                    <option value="long-term">Long-Term</option>
+                                </select>
+                                <label>Sub Group</label>
                             </div>
-                            <div class="input-field col s12 m4 l2">
-                                <input name="description" id="description" type="text" class="validate">
+                            <div class="input-field col s12 m8 l4">
+                                <textarea name="description" id="description" class="materialize-textarea"></textarea>
                                 <label for="description">Description</label>
                             </div>
                         </div>
@@ -90,6 +104,8 @@
                     <div class="modal-footer">
                         <a href="#!" onclick="addAccount()"
                            class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+                        <a href="#!"
+                           class="modal-action modal-close waves-effect waves-green btn-flat focus">Dismiss</a>
                     </div>
                 </form>
             </div>
@@ -109,6 +125,7 @@
     $(document).ready(function () {
         // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
         $('.modal').modal();
+        $('select').material_select();
     });
 
     function addAccount() {
@@ -137,6 +154,8 @@
         },
         copyHeaderClass: true
     });
+//    $('#textarea1').val('New Text');
+    $('#description').trigger('autoresize');
 </script>
 </body>
 </html>
