--- a/client/accounts.html
+++ b/client/accounts.html
@@ -36,7 +36,7 @@
             <!--Add Account Button and Modal Dialog-->
             <a class="waves-effect waves-light btn" href="#addAccountModal">Add Account</a>
             <div id="addAccountModal" class="modal" style="min-height: 70vh;">
-                <form>
+                <form method="POST" id="addAccountForm">
                     <div class="modal-content" style="min-height: 64vh;">
                         <h5 style="text-align: center">Add an Account</h5>
                         <div class="row">
@@ -102,8 +102,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" onclick="addAccount()"
-                           class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+                        <input class="modal-action modal-close waves-effect waves-green btn-flat focus" type="submit"
+                               value="Submit" name="submit" class="submit" id="submit"/>
                         <a href="#!"
                            class="modal-action modal-close waves-effect waves-green btn-flat focus">Dismiss</a>
                     </div>
@@ -116,46 +116,55 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/materialize/dist/js/materialize.min.js"></script>
 <script src="bower_components/dynatable/jquery.dynatable.js"></script>
+<script src="bower_components/jquery-serialize-object/dist/jquery.serialize-object.min.js"></script>
 <script>
+    //Initalize Materializecss
+    $(document).ready(function () {
+        $('.modal').modal();
+        $('select').material_select();
+    });
     $('.datepicker').pickadate({
         selectMonths: true, // Creates a dropdown to control month
         selectYears: 15 // Creates a dropdown of 15 years to control year
     });
 
-    $(document).ready(function () {
-        // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-        $('.modal').modal();
-        $('select').material_select();
-    });
-
-    function addAccount() {
-
-    }
-
+    //Initialize Table
     var someObj = [
         {
-            "accountName": "Cash",
-            "accountType": 'Asset',
-            "normalSide": 'left',
-            "initialBalance": '0.00',
-            "accountNumber": '101',
-            "addedBy": 'Mike',
-            "dateAdded": '2/11/17',
-            "activity": "true",
-            "order": "1",
-            "subGroup": 'Short-Term',
-            "description": 'Cold hard cash'
+            accountName: "Cash",
+            accountType: 'Asset',
+            normalSide: 'Left',
+            initialBalance: '0.00',
+            accountNumber: '101',
+            addedBy: 'Mike',
+            dateAdded: '2/11/17',
+            activity: "Active",
+            order: "1",
+            subGroup: 'Short-Term',
+            description: 'Cold hard cash'
         }
     ];
-    //    var myRecords = JSON.parse(someObj.text())
     $('#chartOfAccounts').dynatable({
         dataset: {
             records: someObj
         },
         copyHeaderClass: true
     });
-//    $('#textarea1').val('New Text');
-    $('#description').trigger('autoresize');
+
+    //Catch Submit
+    $(function () { //shorthand document.ready function
+        $('#addAccountForm').on('submit', function (e) { //use on if jQuery 1.7+
+            e.preventDefault();  //prevent form from submitting
+            var data = $("#addAccountForm :input").serializeObject();
+            someObj.push(data);
+            var dynatable = $('#chartOfAccounts').data('dynatable')
+            dynatable.records.updateFromJson({records: someObj});
+            dynatable.records.init()
+            dynatable.process();
+            $("#addAccountForm").reset();
+        });
+    });
+
 </script>
 </body>
 </html>
